[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "HandyLLM"
version = "0.10.0"
authors = [
  { name="Atomie CHEN", email="atomic_cwh@163.com" },
]
description = "A handy toolkit for using LLM."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["LLM", "Large Language Model", "Prompt", "OpenAI", "API"]
dependencies = [
  "httpx>=0.28.1",
  "mergedeep>=1.3.4",
  "python-dotenv>=1.0.1",
  "python-frontmatter>=1.1.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.4",
  "typing-extensions>=4.13.2",
]

[project.urls]
"Homepage" = "https://github.com/atomiechen/HandyLLM"
"Bug Tracker" = "https://github.com/atomiechen/HandyLLM/issues"
Changelog = "https://github.com/atomiechen/HandyLLM/blob/master/CHANGELOG.md"

[project.scripts]
handyllm = "handyllm.__main__:cli"

[tool.pytest.ini_options]
addopts = [
  "--ignore=examples"
]

[tool.ruff.lint.per-file-ignores]

[tool.uv.sources]
pygments-handyllm = { git = "https://github.com/atomiechen/pygments-handyllm" }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.8",
    "respx>=0.22.0",
    "ruff>=0.12.9",
]
docs = [
    "mdx-include>=1.4.2",
    "mkdocs-static-i18n[material]>=1.3.0",
    "pygments-handyllm",
]

# # ref: https://github.com/astral-sh/ruff/issues/2407#issuecomment-1974783543
# # Ignore unused imports and import * in __init__.py files
# "__init__.py" = ["F401", "F403"]
